# Actix-Pgsql-demo-

./: .env  Cargo.toml  README.md
migrations/2022-09-16-101533_create_cats/: up.sql
src/: main.rs  models.rs  schema.rs
static/: index.html
