[package]
name = "catdex"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.2"
actix-web = "4.2.1"
diesel = { version = "2.0.0", features = ["postgres", "r2d2"] }
dotenvy = "0.15.3"
handlebars = { version = "4.3.4", features = ["dir_source"] }
r2d2 = "0.8.10"
serde = { version = "1.0.144", features = ["serde_derive"] }
serde_json = "1.0.85"
